version 0.51, stable, January 18, svn 574

* Releasing a new stable version. The last stable has been release
  in October 2007
* Updated to the most recent libcurl and libevent libraries
* DNS resolving now works via c-ares library.
  Thanks to Val Shkolnikov <val@nvsoft.net> for this suggestion and patch.

version 0.50, unstable, September 21, svn 570

* Advanced to curl-19.6, which is closing dead connections faster
  and contains other important fixes.

By Val Shkolnikov <val@nvsoft.net>

* Added a fixed request rate feature.
  It is a bit risky feature, but "Navigare necesse est ..."
* Fixed a bug for fixed-rate, where curl-loader would not stop on run time 
  expiration or url completion

By Val Shkolnikov <val@nvsoft.net>
* Directed operational statistics into a file with the extension .ops
* Added DUMP_OPSTATS and RUN_TIME options.
* Added time stamp to the .log file, streamlined logging using macros.
* Added a second -v option for varied level of logging detail.

* Renamed function getline to get_line since folks from RedHat are 
   polluting the namespace. Thanks to jari pietila <jari2004@hotmail.com>
   for reporting that.

* Fixed x86_64 arch related bug in parse_conf.c Thanks to nobody/anonymous.


version 0.49, unstable, July 5, 2009, svn 561

* Corrected weirdness in parse_conf.c Thanks to nobody/anonymous.

* Making of libcurl without support for SSH. Some platforms do not
   have libssh2 installed and it breaks our build.

* Post an XML-file as a body of POST request.
  An example of configuration file is conf-examples/post-xml.conf, where the XML-file itself is
  residing in the same configuration directory, namely conf-examples/some.xml
  The majic is now done by:
  REQUEST_TYPE=POST
  MULTIPART_FORM_DATA="file=@some.xml"

* Advanced to libevent-1.4.11-stable, which fixes several nastry epoll bugs.


version 0.48, unstable, April 9, 2009, svn 556

* Advanced to curl version 19.4 with several bugfixes in the area