@@ -1291,20 +1291,7 @@ static int fetching_decision (client_context* cctx, url_context* url)
       return cctx->url_fetch_decision[cctx->url_curr_index];
     }
 
-  struct timeval  tval;
-
-  if (gettimeofday (&tval, NULL) == -1)
-    {
-      fprintf(stderr, "%s - gettimeofday () failed with errno %d.\n", 
-              __func__, errno);
-      return -1;
-    }
-
-  srand (tval.tv_sec * tval.tv_usec);
-  
-  int number = 1+ (int) (((double)100) *(rand () / (RAND_MAX + 1.0)));
-
-  if (number <= url->fetch_probability)
+  if (get_prob() <= url->fetch_probability)
     {
       if (cctx->url_fetch_decision)
         {
@@ -1355,8 +1342,9 @@ static int load_urls_state (client_context* cctx,
               return (cctx->client_state = CSTATE_FINISHED_OK);
             }
           
-          // Set the new url index
+          // Set the new url index and url
           cctx->url_curr_index =  (size_t) url_next;
+          url = &bctx->url_ctx_array[cctx->url_curr_index];
         }
       while (fetching_decision (cctx, url) != 1);
       
